Fix Duplicate dataGroupIdentifiers for functionGroupDataGroups in putAssignUserPermissions API Call